fix image overflow in VE

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -655,7 +655,6 @@ pre,
 .mw-body-content a > img,
 .mw-body-content .floatnone > img {
 	height: auto !important;
-	max-width: 85% !important;
 }
 
 a > img,
